# pro-forma-analytics-tool

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_REPORT.md  BUSINESS_PROCESS_OVERVIEW.md  CLAUDE.md  DEVELOPER_QUICKSTART.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_SETUP.md  Dockerfile.backend.dev  Dockerfile.frontend.dev  Dockerfile.production  Dockerfile.test  FRONTEND_FIXES_REPORT.md  HOW_TO_USE_PROPERTY_INPUT.md  LICENSE  ONEDRIVE_SOLUTION_COMPLETE.md  ProFormaAnalytics_WeeklyUpdate.xml  README.md  SYSTEM_READY_SUMMARY.md  TESTING_GUIDE.md  TESTING_PROCEDURES.md  collect_property_data.py  collect_simplified_data.py  coverage_report.txt  data_manager.py  demo_dcf_assumptions.py  demo_end_to_end_workflow.py  demo_phase_2_initial_numbers.py  demo_phase_3_cash_flow.py  demo_phase_4_complete_dcf.py  demo_property_input.py  demo_property_system.py  docker-compose.dev.yml  docker-compose.production.yml  enhanced_property_inputs.py  excel_analysis_consolidated.py  (+28 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  data-pipeline.yml  quality.yml  release.yml
.kiro/specs/api-enhancements/: design.md  requirements.md  tasks.md
.kiro/specs/api-layer/: design.md  requirements.md  tasks.md
.kiro/specs/backend-integration/: design.md  requirements.md  tasks.md
.kiro/specs/frontend-integration/: design.md  requirements.md  tasks.md
.kiro/specs/frontend-stabilization/: design.md  requirements.md  tasks.md
.kiro/specs/onedrive-compatibility/: design.md  requirements.md  tasks.md
.kiro/specs/react-nextjs-frontend/: design.md  requirements.md  tasks.md
Reference_ Docs/: Notes
archive/legacy_scripts/: demo_simple.py  regenerate_plots.py  test_integration.py  test_integration_quick.py  test_property_input.py
config/: README.md  api_keys.json  dcf_constants.py  geography.py  msa_config.py  parameters.py  production.py  settings.py
core/: README.md  exceptions.py  logging_config.py  property_inputs.py
data/: README.md
data/api_sources/: fred_client.py
data/collectors/: __init__.py  base_collector.py  bls_collector.py  data_orchestrator.py  enhanced_real_estate_collector.py  fhfa_collector.py  fred_enhanced_collector.py  lending_collector.py  real_estate_collector.py
data/databases/: README.md  database_manager.py  forecast_cache_schema.sql  market_data_schema.sql  property_data_schema.sql
data/databases/backups/: README.md  backup_metadata_20250728_235218.json
data/databases/schemas/: README.md  economic_data_schema.sql  forecast_cache_schema.sql
data/scheduler/: __init__.py  data_scheduler.py  schedule_config.json
database/: property_database.py
docs/: API.md  API_INTEGRATION_GUIDE.md  COMPLETE_USER_GUIDE.md  CONTRIBUTING.md  DATABASE.md  DATABASE_OPTIMIZATION_SUMMARY.md  DCF_DATA_STRUCTURES.md  DCF_ENGINE_ARCHITECTURE.md  DCF_IMPLEMENTATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DOCKER_WORKFLOW.md  EXCEL_PRO_FORMA_ANALYSIS.md  LIVE_DATA_SETUP.md  MONTE_CARLO_MAPPING.md  PRODUCTION_DATA_IMPLEMENTATION.md  PROPERTY_INPUT_WORKFLOW.md  README.md  USER_GUIDE.md  background_audit_prompt.txt  claude_code_cleanup_prompt.txt
docs/archive/: README.md  claude_code_cleanup_prompt.txt
forecasting/: README.md  __init__.py  prophet_engine.py
frontend/: .dockerignore  .gitignore  .onedriveignore  README.md  eslint.config.mjs  jest.config.js  jest.performance.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  playwright-load.config.ts  playwright-visual.config.ts  playwright.config.ts  tsconfig.json
frontend/.next-safe/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next-safe/cache/: .previewinfo  .rscinfo
frontend/.next-safe/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next-safe/types/: routes.d.ts  validator.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAPI.ts  useAddressValidation.ts  useMarketData.ts  useMarketDefaults.ts  useMonteCarloSimulation.ts  useRetryableAPI.ts  useToast.ts
monitoring/: prometheus.yml
monitoring/alerts/: proforma-alerts.yml
monte_carlo/: README.md  __init__.py  simulation_engine.py
nginx/: nginx.conf
scripts/: README.md  backup_recovery.py  cleanup_databases.py  create_nc_visualization.py  cron_setup.sh  deploy-production.sh  dev-setup.bat  dev-setup.sh  entrypoint.sh  export_data.py  generate_release_notes.py  health_check.py  manage_scheduler.py  monitor_database_performance.py  optimize_database_indexes.py  profile_database_performance.py  profile_memory.py  proforma-data-updater.service  replace_mock_data.py  run_full_tests.bat  run_full_tests.sh  setup_windows_scheduler.ps1  setup_windows_scheduler.py  validate-linux.bat  validate-linux.sh  validate_architecture.py  validate_docs.py  validate_readme_examples.py  verify-production.py  visualize_historical_data.py
src/: README.md  __init__.py
src/application/: __init__.py
src/domain/: __init__.py
src/infrastructure/: __init__.py  configuration.py  container.py  service_factory.py
src/presentation/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_simplified_property_system.py
tests/integration/: test_api_endpoints.py  test_complete_dcf_workflow.py  test_frontend_backend_integration.py  test_production_data_validation.py  test_user_workflow.py
tests/performance/: test_api_performance_endpoints.py  test_irr_performance.py
tests/unit/: test_cash_flow_projection.py  test_dcf_assumptions.py  test_financial_metrics.py  test_initial_numbers.py
user_input/: README.md  __init__.py  input_validation.py  property_collector.py  web_forms.py
validation_charts/: VALIDATION_SUMMARY.md  data_summary.csv  north_carolina_data_summary.csv
(+295 files in other folders)
